components/Gallery.css
div.fullview {
	position: fixed;
	left: 0;
	top: 0;
	width: 100vw;
	height: 100vh;
	display: flex;
	flex-direction: row;
	column-gap: 1fr;
	background-color: #000000C0;
	justify-content: space-around;
	align-items: center;
	cursor: zoom-out;
}

article.fullviewinfo {
	margin: (var(--block-spacing-vertical) / 2) 0
}

img.active, iframe.active, img.thumbnail {
	width: 100%;
	height: auto;
	max-width: 100%;
	max-height: 100%;
	object-fit: contain;
}

img.fullview {
	max-height: 90vh;
	width: auto;
	height: auto;
	object-fit: contain;
}

a.active, a.thumbnail {
	cursor: zoom-in;
	padding: 0.25rem;
	margin: 0.25rem;
	background-color: transparent;
}

a.active:hover, a.thumbnail:hover {
	cursor: zoom-in;
	background-color: var(--secondary);
}

@media (max-width: 991px) {
	a.active {
		display: none;
	}
	div.fullview {
		flex-direction: column;
	}
	img.fullview {
		max-height: 66vh;
	}
}

